# mpm

./: .gitmodules  CMakeLists.txt  README.md
config/: snow_cube.yaml  snow_cylinder_dragon.yaml  snow_text.yaml  snow_two_balls.yaml  snow_two_balls_sparse.yaml  test.yaml
data/: ball1_sparse.xyz  ball2_sparse.xyz  bunny_sparse.xyz  cube.xyz  cube_sparse.xyz  sphere_sparse.xyz
include/: apic_material_point3d.h  apic_mpm_solver3d.h  collision_object3d.h  create_file.h  cuda_utils.h  enums.h  grid3d.h  interpolation3d.h  material_point3d.h  mpm3d_parser.h  mpm_solver3d.h  mpm_solver3d_builder.h  online_mpm3d_renderer.h  shader_loader.h  svd_eigen.h
shader/: particle.vert  plane.frag  plane.vert  snow.frag
src/: CMakeLists.txt  apic_material_point3d.cu  apic_mpm_solver3d.cu  collision_object3d.cu  create_file.cpp  grid3d.cu  grid_data3d.cu  interpolation3d.cu  material_point3d.cu  mpm3d_parser.cpp  mpm_solver3d.cpp  mpm_solver3d.cu  mpm_solver3d_builder.cu  online_mpm3d_renderer.cpp  shader_loader.cpp  svd_eigen.cu
src/demo/: CMakeLists.txt
src/demo/mpm-apic/: CMakeLists.txt  main.cu
src/demo/mpm-pic-flip/: CMakeLists.txt  main.cu
src/demo/test_build/: CMakeLists.txt  main.cu
